--- a/package.json
+++ b/package.json
@@ -3,11 +3,13 @@
 	"private": true,
 	"version": "0.0.1",
 	"type": "module",
+	"module": "./.svelte-kit/output/server/index.js",
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
 		"preview": "vite preview",
 		"prepare": "svelte-kit sync || echo ''",
+		"postinstall": "bun2nix -o nix/bun.nix",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"format": "prettier --write .",
@@ -26,5 +28,8 @@
 		"tailwindcss": "^4.0.0",
 		"typescript": "^5.0.0",
 		"vite": "^7.0.4"
+	},
+	"dependencies": {
+		"svelte-adapter-bun": "^0.5.2"
 	}
 }
